--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,35 @@ h2 {
     margin-right: 60px;
 }
 
+.btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 
+.subcontainer {
+    background-color: #690500 !important;
+    color: white !important;
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    text-align: center !important;
+    margin-left: 40px !important;
+    margin-right: 40px !important;
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
+    height: 100px !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.container {
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
 .profilepic {
     display: block;
     margin-left: auto;
@@ -83,7 +111,20 @@ footer {
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 15px;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+.graphicdesign2 {
+    background-color: #8B7845;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
     text-align: center;
     font-weight: bold;
     border-top-left-radius: 15px;
@@ -96,7 +137,20 @@ footer {
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 15px;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.uxui2 {
+    background-color: #FFE19C;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
     text-align: center;
     font-weight: bold;
     border-top-right-radius: 15px;
@@ -104,10 +158,15 @@ footer {
 }
 
 .buttons {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: center !important;
+}
+
+.btn {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 20px;
 }
 
 .gallery {
@@ -206,6 +265,14 @@ footer {
     display: flex;
 }
 
+.resume {
+    display: flex;
+    justify-content: center;
+    margin-left: 90px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
 .overlayimg1 {
     background-image: url();
 }
@@ -242,4 +309,30 @@ footer {
 
 .overlayimg {
     
+}
+
+.profilepic {
+    width: 65%;
+}
+
+.subtitle {
+    font-size: 40px;
+    margin-left: 140px;
+    margin-top: 35px;
+}
+
+.para {
+    font-size: 20px;
+    margin-left: 70px;
+    margin-right: 80px;
+    line-height: 40px;
+}
+
+.caro {
+    width: 75%;
+    margin-top: 40px;
+    margin-left: 200px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
 }
