--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 .customNav {
   position: fixed;
-  width: 100%;
   background-color: #E9EB9E !important;
   background-size: cover;
   z-index: 10;
+  margin-right: -15px !important;
 }
 
 
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
+    margin-left: 10px;
 }
 
 .logo {
@@ -20,6 +21,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    padding-left: 10px;
 }
 
 .right a {
@@ -30,6 +32,12 @@
     padding-right: 40px;
     display: flex;
     justify-content: flex-end;
+}
+
+.nav-link {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end !important;
 }
 
 .right {
@@ -244,8 +252,8 @@ footer {
     color: white;
     padding-top: 3px;
     padding-bottom: 3px;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     text-align: center;
     height: 120px;
     display: flex;
@@ -335,4 +343,12 @@ footer {
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
+}
+
+.contact {
+    font-size: 20px;
+    margin-left: 130px;
+    margin-right: 80px;
+    line-height: 40px;
+    color: white;
 }
