--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .customNav {
   position: fixed;
-  background-color: #E9EB9E !important;
+  background-color: #001514 !important;
   background-size: cover;
   z-index: 10;
   margin-right: -15px !important;
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end !important;
+    color: white !important;
 }
 
 .right {
@@ -116,7 +117,7 @@ h2 {
 }
 
 footer {
-    background-color: #071013;
+    background-color: #001514;
     padding: 60px;
     margin-left: -15px;
     margin-right: -15px;
@@ -126,6 +127,7 @@ footer {
 
 .background {
     background-image: url("../img/New Background-02.jpg");
+    background-repeat: no-repeat;
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: -15px;
@@ -367,4 +369,44 @@ footer {
     margin-right: 80px;
     line-height: 40px;
     color: white;
+}
+
+.wdp {
+    margin-top: 30px;
+    background-image: url("../Graphic Design/Workers Defense Project Website Redesign.jpg");
+    background-repeat: no-repeat;
+    width: 960px;
+    height: 500px;
+    padding-bottom: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.casestudy {
+    display: block;
+    margin-left: 250px;
+    margin-right: 250px;
+    margin-top: 50px;
+}
+
+.casestudy1 {
+    width: 35%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+
+.cs1 {
+    background-color: #FFE19C;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 15px;
+    display: block;
 }
