--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,9 @@ h2 {
     margin-top: 30px !important;
     margin-bottom: 30px !important;
     height: 100px !important;
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -96,6 +96,15 @@ h2 {
     padding-top: 10px;
     padding-bottom: 20px;
     margin-top: 50px; 
+}
+
+.container4 {
+    background-color: #CEB7B3;
+    margin-top: 10px;
+    margin-right: 40px;
+    margin-bottom: 10px;
+    padding: 20px;
+    border: solid black 1px;
 }
 
 .container3 {
@@ -128,6 +137,7 @@ footer {
 .background {
     background-image: url("../img/New Background-02.jpg");
     background-repeat: no-repeat;
+    margin-top: -5px;
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: -15px;
@@ -331,10 +341,21 @@ footer {
     color: white;
 }
 
+.subtitle2 {
+    font-size: 40px;
+    color: black;
+    font-weight: bold;
+}
+
 .para {
     font-size: 20px;
     margin-left: 70px;
     margin-right: 80px;
+    line-height: 40px;
+}
+
+.para2 {
+    font-size: 20px;
     line-height: 40px;
 }
 
@@ -393,4 +414,26 @@ footer {
     font-weight: bold;
     border-radius: 15px;
     display: block;
+}
+
+
+.subbackground {
+    background-color: #690500;
+    color: white !important;
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    text-align: center !important;
+    margin-left: 40px !important;
+    margin-right: 40px !important;
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
+}
+
+.para {
+    font-size: 20px;
+    color: white;
+    padding-left: 40px;
+    padding-right: 40px;   
 }
