--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ h2 {
     flex-direction: row;
     justify-content: space-around;
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .cards2 {
@@ -120,6 +121,7 @@ h2 {
     flex-direction: row;
     justify-content: space-around;
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .container {
@@ -161,7 +163,7 @@ footer {
 }
 
 .background2 {
-    background-color: #983628; 
+    background-color: #EFECCA; 
     margin-left: 250px; 
     margin-right: 250px; 
     margin-top: -20px;
