--- a/css/style.css
+++ b/css/style.css
@@ -370,12 +370,12 @@ footer {
     font-size: 40px;
     margin-left: 30px;
     margin-top: 35px;
-    color: black;
+    color: black !important;
 }
 
 .subtitle2 {
     font-size: 30px;
-    color: black;
+    color: black !important;
     font-weight: bold;
 }
 
@@ -404,7 +404,7 @@ footer {
     margin-left: 30px;
     margin-right: 80px;
     line-height: 40px;
-    color: black;
+    color: black !important;
 }
 
 .wdp {
@@ -464,7 +464,7 @@ footer {
 
 .para {
     font-size: 18px;
-    color: black;
+    color: black !important;
     padding-left: 40px;
     padding-right: 40px;   
 }
