--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,8 @@ footer {
 }
 
 .background {
-    background-image: url("../img/New Background-02.jpg");
+    background-image: url("../img/background 2-03.jpg");
+    background-repeat: inherit;
     margin-top: -5px;
     margin-left: -15px;
     margin-right: -15px;
@@ -158,7 +159,7 @@ footer {
 }
 
 .background2 {
-    background-color: #EFECCA; 
+    background-color: #9B3D12; 
     margin-left: 250px; 
     margin-right: 250px; 
     margin-top: -20px;
@@ -168,7 +169,7 @@ footer {
 }
 
 .background3 {
-    background-color: #E08D79;
+    background-color: #DDAE7E;
 }
 .graphicdesign {
     background-color: #EAF0CE;
